# cursus

./: .gitignore  README.md  render.yaml
backend/: .env.example  .gitignore  README.md  api.py  config.py  main.py  pyproject.toml  requirements.txt  schemas.py  services.py  state.py
frontend/: README.md  middleware.ts  package-lock.json  package.json  proxy.ts  syllabus_debug.txt  syllabus_utf8.txt  test.csv
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ai-planner/: page.tsx
frontend/app/api/ai-planner/: route.ts
frontend/app/auth/: page.tsx
frontend/app/hod/: page.tsx
frontend/app/question-papers/: page.tsx
frontend/app/rag/: page.tsx
frontend/app/staff/: page.tsx
frontend/app/student/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/hod/: AtRiskTable.tsx  ClassManagement.tsx  ProgressChart.tsx  StatsRow.tsx  SubjectChart.tsx  SyllabusManager.tsx  UploadManager.tsx
frontend/components/staff/: ClassSyllabusEditor.tsx  StaffSyllabusTracker.tsx
frontend/components/student/: AskAI.tsx  Dashboard.tsx  ResourceViewer.tsx  Sidebar.tsx  StudyPlan.tsx  Syllabus.tsx
frontend/components/ui/: tabs.tsx
frontend/data/: mockStudents.ts  syllabus.ts
frontend/lib/: claude.ts  cloudinary.ts  gemini.ts  mongodb.ts  mongoose.ts  ragBackend.ts  riskCalculator.ts  storage.ts
frontend/lib/auth/: session.ts  users.ts
frontend/lib/hooks/: use-syllabus.ts
frontend/models/: class.ts  course.ts  customSyllabus.ts  faculty.ts  hod.ts  qp_notes.ts  student.ts  syllabus.ts  syllabusProgress.ts  syllabusmodel.ts  user.ts
(+22 files in other folders)
