[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"fastapi>=0.115.0",
	"uvicorn>=0.30.0",
	"pydantic>=2.8.0",
	"python-dotenv>=1.0.1",
	"requests>=2.32.0",
	"pymongo>=4.8.0",
	"pinecone>=5.0.1",
	"langchain>=0.3.0",
	"langchain-community>=0.3.0",
	"langchain-text-splitters>=0.3.0",
	"pypdf>=4.3.1",
]
